Working branch with USART3, and LoRa. Need to delete UTIL_ADV_TRACE_Driver_s UTIL_TraceDriver.

--- a/Projects/NUCLEO-L476RG/Applications/LoRaWAN/LoRaWAN_End_Node/MDK-ARM/LoRaWAN_End_Node.uvprojx
+++ b/Projects/NUCLEO-L476RG/Applications/LoRaWAN/LoRaWAN_End_Node/MDK-ARM/LoRaWAN_End_Node.uvprojx
@@ -774,14 +774,14 @@
               <FilePath>../../../../../../Utilities/timer/stm32_timer.c</FilePath>
             </File>
             <File>
-              <FileName>stm32_tiny_vsnprintf.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>../../../../../../Utilities/misc/stm32_tiny_vsnprintf.c</FilePath>
-            </File>
-            <File>
               <FileName>stm32_adv_trace.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\..\..\Utilities\trace\adv_trace\stm32_adv_trace.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32_tiny_vsnprintf.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\..\..\Utilities\misc\stm32_tiny_vsnprintf.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -807,6 +807,11 @@
               <FileName>tiny-json.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Core\Src\tiny-json.c</FilePath>
+            </File>
+            <File>
+              <FileName>fillBuff.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\fillBuff.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -1700,14 +1705,14 @@
               <FilePath>../../../../../../Utilities/timer/stm32_timer.c</FilePath>
             </File>
             <File>
-              <FileName>stm32_tiny_vsnprintf.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>../../../../../../Utilities/misc/stm32_tiny_vsnprintf.c</FilePath>
-            </File>
-            <File>
               <FileName>stm32_adv_trace.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\..\..\Utilities\trace\adv_trace\stm32_adv_trace.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32_tiny_vsnprintf.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\..\..\Utilities\misc\stm32_tiny_vsnprintf.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -1733,6 +1738,11 @@
               <FileName>tiny-json.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Core\Src\tiny-json.c</FilePath>
+            </File>
+            <File>
+              <FileName>fillBuff.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\fillBuff.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -2575,14 +2585,14 @@
               <FilePath>../../../../../../Utilities/timer/stm32_timer.c</FilePath>
             </File>
             <File>
-              <FileName>stm32_tiny_vsnprintf.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>../../../../../../Utilities/misc/stm32_tiny_vsnprintf.c</FilePath>
-            </File>
-            <File>
               <FileName>stm32_adv_trace.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\..\..\Utilities\trace\adv_trace\stm32_adv_trace.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32_tiny_vsnprintf.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\..\..\Utilities\misc\stm32_tiny_vsnprintf.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -2608,6 +2618,11 @@
               <FileName>tiny-json.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Core\Src\tiny-json.c</FilePath>
+            </File>
+            <File>
+              <FileName>fillBuff.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\fillBuff.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -3501,14 +3516,14 @@
               <FilePath>../../../../../../Utilities/timer/stm32_timer.c</FilePath>
             </File>
             <File>
-              <FileName>stm32_tiny_vsnprintf.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>../../../../../../Utilities/misc/stm32_tiny_vsnprintf.c</FilePath>
-            </File>
-            <File>
               <FileName>stm32_adv_trace.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\..\..\Utilities\trace\adv_trace\stm32_adv_trace.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32_tiny_vsnprintf.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\..\..\Utilities\misc\stm32_tiny_vsnprintf.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -3534,6 +3549,11 @@
               <FileName>tiny-json.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Core\Src\tiny-json.c</FilePath>
+            </File>
+            <File>
+              <FileName>fillBuff.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\fillBuff.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -4427,14 +4447,14 @@
               <FilePath>../../../../../../Utilities/timer/stm32_timer.c</FilePath>
             </File>
             <File>
-              <FileName>stm32_tiny_vsnprintf.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>../../../../../../Utilities/misc/stm32_tiny_vsnprintf.c</FilePath>
-            </File>
-            <File>
               <FileName>stm32_adv_trace.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\..\..\Utilities\trace\adv_trace\stm32_adv_trace.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32_tiny_vsnprintf.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\..\..\Utilities\misc\stm32_tiny_vsnprintf.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -4460,6 +4480,11 @@
               <FileName>tiny-json.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Core\Src\tiny-json.c</FilePath>
+            </File>
+            <File>
+              <FileName>fillBuff.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\fillBuff.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -5353,14 +5378,14 @@
               <FilePath>../../../../../../Utilities/timer/stm32_timer.c</FilePath>
             </File>
             <File>
-              <FileName>stm32_tiny_vsnprintf.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>../../../../../../Utilities/misc/stm32_tiny_vsnprintf.c</FilePath>
-            </File>
-            <File>
               <FileName>stm32_adv_trace.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\..\..\Utilities\trace\adv_trace\stm32_adv_trace.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32_tiny_vsnprintf.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\..\..\Utilities\misc\stm32_tiny_vsnprintf.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -5386,6 +5411,11 @@
               <FileName>tiny-json.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Core\Src\tiny-json.c</FilePath>
+            </File>
+            <File>
+              <FileName>fillBuff.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\fillBuff.c</FilePath>
             </File>
           </Files>
         </Group>
