Added functions and files working with flash. Added several points to json structure. Structure json_arrwas added to file flash_mem.h. Functions init_flash, readflash, change_buf, rewriteflash was added to file flash_mem.h.

--- a/Projects/NUCLEO-L476RG/Applications/LoRaWAN/LoRaWAN_End_Node/MDK-ARM/LoRaWAN_End_Node.uvprojx
+++ b/Projects/NUCLEO-L476RG/Applications/LoRaWAN/LoRaWAN_End_Node/MDK-ARM/LoRaWAN_End_Node.uvprojx
@@ -478,6 +478,11 @@
               <FileType>1</FileType>
               <FilePath>..\Core\Src\flash_mem.c</FilePath>
             </File>
+            <File>
+              <FileName>flash_work.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\flash_work.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -1323,6 +1328,11 @@
               <FileName>flash_mem.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Core\Src\flash_mem.c</FilePath>
+            </File>
+            <File>
+              <FileName>flash_work.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\flash_work.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -2290,6 +2300,11 @@
               <FileType>1</FileType>
               <FilePath>..\Core\Src\flash_mem.c</FilePath>
             </File>
+            <File>
+              <FileName>flash_work.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\flash_work.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -3204,6 +3219,11 @@
               <FileName>flash_mem.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Core\Src\flash_mem.c</FilePath>
+            </File>
+            <File>
+              <FileName>flash_work.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\flash_work.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -4171,6 +4191,11 @@
               <FileType>1</FileType>
               <FilePath>..\Core\Src\flash_mem.c</FilePath>
             </File>
+            <File>
+              <FileName>flash_work.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\flash_work.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -5136,6 +5161,11 @@
               <FileName>flash_mem.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Core\Src\flash_mem.c</FilePath>
+            </File>
+            <File>
+              <FileName>flash_work.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\flash_work.c</FilePath>
             </File>
           </Files>
         </Group>
